Cambios en el archivo main.c con el fin de probar la librería nueva. Problemas con la optimización del proyecto, se dejó en none 00, ya que el led no hacía el toggle correctamente, se quedaba estático.

--- a/FRDM_KL02Z_Proyecto/.cproject
+++ b/FRDM_KL02Z_Proyecto/.cproject
@@ -415,6 +415,7 @@
 								<option id="com.crt.advproject.gcc.specs.1307338526" name="Specs" superClass="com.crt.advproject.gcc.specs" useByScannerDiscovery="false"/>
 								<option id="com.crt.advproject.gcc.config.1519067464" name="Obsolete (Config)" superClass="com.crt.advproject.gcc.config" useByScannerDiscovery="false"/>
 								<option id="com.crt.advproject.gcc.store.391206046" name="Obsolete (Store)" superClass="com.crt.advproject.gcc.store" useByScannerDiscovery="false"/>
+								<option id="com.crt.advproject.gcc.exe.release.option.optimization.level.1052333614" superClass="com.crt.advproject.gcc.exe.release.option.optimization.level" useByScannerDiscovery="true" value="gnu.c.optimization.level.none" valueType="enumerated"/>
 								<inputType id="com.crt.advproject.compiler.input.328067338" superClass="com.crt.advproject.compiler.input"/>
 							</tool>
 							<tool id="com.crt.advproject.gas.exe.release.1787609629" name="MCU Assembler" superClass="com.crt.advproject.gas.exe.release">
